--- a/MedicalLink/App.config
+++ b/MedicalLink/App.config
@@ -1,51 +1,55 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="System.Configuration.IgnoreSectionHandler"/>
+    <section name="log4net" type="System.Configuration.IgnoreSectionHandler" />
   </configSections>
   <log4net debug="true">
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\LogSystem.txt"/>
-      <appendToFile value="true"/>
-      <rollingStyle value="Size"/>
-      <maxSizeRollBackups value="10"/>
-      <maximumFileSize value="2MB"/>
-      <staticLogFileName value="true"/>
+      <file value="Logs\LogSystem.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="2MB" />
+      <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n"/>
+        <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
       </layout>
     </appender>
     <root>
-      <level value="ALL"/>
-      <appender-ref ref="RollingLogFileAppender"/>
+      <level value="ALL" />
+      <appender-ref ref="RollingLogFileAppender" />
     </root>
   </log4net>
 
 
   <appSettings>
-    <add key="skin" value=""/>
-    <add key="conStr" value="Server=localhost;User Id=postgres;Password=1234;Database=test;"/>
-    <add key="ServerHost" value="wHTH8UEtpJ8DB2dSFCJlWQ=="/>
-    <add key="ServerPort" value="x2MWpTKER2A="/>
-    <add key="Username" value="X/wuKluTVg2Z6cqR1FXIJQ=="/>
-    <add key="Password" value="VbrmL6qGNvI="/>
-    <add key="Database" value="HBSHbUsxLqZNT9jemFTnXw=="/>
-    <add key="checkEditNhoPass" value="True"/>
-    <add key="LoginUser" value="KgyxW9jqNcc="/>
-    <add key="LoginPassword" value="E36w19IK+gaPIT7K1d/6sw=="/>
-    <add key="ClientSettingsProvider.ServiceUri" value=""/>
+    <add key="skin" value="" />
+    <add key="conStr" value="Server=localhost;User Id=postgres;Password=1234;Database=test;" />
+    <add key="ServerHost" value="wHTH8UEtpJ8DB2dSFCJlWQ==" />
+    <add key="ServerPort" value="x2MWpTKER2A=" />
+    <add key="Username" value="X/wuKluTVg2Z6cqR1FXIJQ==" />
+    <add key="Password" value="VbrmL6qGNvI=" />
+    <add key="Database" value="HBSHbUsxLqZNT9jemFTnXw==" />
+    <add key="checkEditNhoPass" value="True" />
+    <add key="LoginUser" value="KgyxW9jqNcc=" />
+    <add key="LoginPassword" value="E36w19IK+gaPIT7K1d/6sw==" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
       </providers>
     </membership>
     <roleManager defaultProvider="ClientRoleProvider" enabled="true">
       <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
       </providers>
     </roleManager>
   </system.web>
 
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" /></startup><system.data> 
+   <DbProviderFactories> 
+     <add name="dotConnect for PostgreSQL" invariant="Devart.Data.PostgreSql" description="Devart dotConnect for PostgreSQL" type="Devart.Data.PostgreSql.PgSqlProviderFactory, Devart.Data.PostgreSql, Version= 7.8.862.0, Culture=neutral, PublicKeyToken=09af7300eec23701" />
+   </DbProviderFactories> 
+  </system.data></configuration>
