--- a/MedicalLink/MedicalLink.csproj
+++ b/MedicalLink/MedicalLink.csproj
@@ -86,11 +86,13 @@
     </Reference>
     <Reference Include="DevExpress.DataAccess.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.DataAccess.v15.2.UI, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.ExpressApp.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Images.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
       <Private>True</Private>
     </Reference>
     <Reference Include="DevExpress.Map.v15.2.Core, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Office.v15.2.Core, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Persistent.Base.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.PivotGrid.v15.2.Core, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Printing.v15.2.Core, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a">
       <Private>True</Private>
@@ -137,6 +139,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="DevExpress.XtraReports.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraReports.v15.2.Extensions, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraRichEdit.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraRichEdit.v15.2.Extensions, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraTreeList.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
@@ -257,6 +260,18 @@
     </Compile>
     <Compile Include="BaoCao\BCPhauThuatThuThuat\BCPhauThuatThuThuatProcess.cs">
       <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="BaoCao\BCSoCDHA\SoCDHA_XQuang.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="BaoCao\BCSoCDHA\SoCDHA_XQuang.Designer.cs">
+      <DependentUpon>SoCDHA_XQuang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BaoCao\BCSoCDHA\ucBCSoCDHA.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="BaoCao\BCSoCDHA\ucBCSoCDHA.Designer.cs">
+      <DependentUpon>ucBCSoCDHA.cs</DependentUpon>
     </Compile>
     <Compile Include="BaoCao\BCThucHienCLS\ucBCThucHienCLS.cs">
       <SubType>UserControl</SubType>
@@ -737,7 +752,7 @@
     <Compile Include="Base\ThongBaoLable.cs" />
     <Compile Include="FormCommon\DangKyBanQuyen\ClassEncoding.cs" />
     <Compile Include="FormCommon\DangKyBanQuyen\HardwareInfo.cs" />
-    <Compile Include="FormCommon\DangKyBanQuyen\kiemTraLicenseHopLe.cs" />
+    <Compile Include="FormCommon\DangKyBanQuyen\KiemTraLicense.cs" />
     <Compile Include="FormCommon\frmConnectDB.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -775,6 +790,11 @@
     <Compile Include="FormCommon\ucTrangChu.Designer.cs">
       <DependentUpon>ucTrangChu.cs</DependentUpon>
     </Compile>
+    <Compile Include="PrintRibbonControllerResources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PrintRibbonControllerResources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThongBao\frmThongBao.cs">
@@ -802,6 +822,12 @@
       <DependentUpon>WaitForm1.cs</DependentUpon>
     </Compile>
     <Compile Include="Utilities\Common.Excel\ExcelExport.cs" />
+    <Compile Include="Utilities\PrintPreview\PrintPreviewDev.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Utilities\PrintPreview\PrintPreviewDev.Designer.cs">
+      <DependentUpon>PrintPreviewDev.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utilities\Util_DateTime.cs" />
     <Compile Include="Utilities\Util_NumberConvert.cs" />
     <Compile Include="Utilities\Util_TypeConvertParse.cs" />
@@ -822,6 +848,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BaoCao\BCChiDinhPTTT\ucBCChiDinhPTTT.resx">
       <DependentUpon>ucBCChiDinhPTTT.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BaoCao\BCSoCDHA\SoCDHA_XQuang.resx">
+      <DependentUpon>SoCDHA_XQuang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BaoCao\BCSoCDHA\ucBCSoCDHA.resx">
+      <DependentUpon>ucBCSoCDHA.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="BaoCao\BCThucHienCLS\ucBCThucHienCLS.resx">
       <DependentUpon>ucBCThucHienCLS.cs</DependentUpon>
@@ -1018,6 +1050,10 @@
     <EmbeddedResource Include="FormCommon\ucTrangChu.resx">
       <DependentUpon>ucTrangChu.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PrintRibbonControllerResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>PrintRibbonControllerResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -1040,6 +1076,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ThongBao\WaitForm1.resx">
       <DependentUpon>WaitForm1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Utilities\PrintPreview\PrintPreviewDev.resx">
+      <DependentUpon>PrintPreviewDev.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <Content Include="Documents\Huongdansudung.docx">
@@ -1137,6 +1176,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Templates\BC_PhauThuatThuThuat_CLS.xlsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Templates\So_CDHA_SieuAmXQuangCanThiep.xlsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Templates\So_CDHA_XQuangCTMRI.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
