--- a/MedicalLinkLauncher/MedicalLinkLauncher.csproj
+++ b/MedicalLinkLauncher/MedicalLinkLauncher.csproj
@@ -33,7 +33,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\MedicalLink\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -110,7 +110,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Logo_VT_1.ico" />
-    <Content Include="Martin-Berube-Flat-Animal-Crab.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
